--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,30 +27,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cached_network_image: 3.2.0
+  cached_network_image: 3.2.1
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
+  extended_image: ^6.2.1
   firebase_analytics: ^9.1.8
   firebase_core: ^1.17.0
   flutter:
     sdk: flutter
-  flutter_easyloading: ^3.0.3
+  flutter_easyloading: ^3.0.5
   flutter_inappwebview: ^5.4.3+7
-  flutter_svg: ^1.0.3
+  flutter_svg: ^1.1.0
   get: ^4.6.5
   get_storage: ^2.0.3
   google_fonts: ^3.0.0
-  graphql_flutter: ^5.1.0
+  graphql_flutter: ^5.1.1-beta.3
   hive: ^2.2.1
   intl: ^0.17.0
   onboarding: ^3.1.0
   sentry_flutter: ^6.5.1
-  share_plus: ^4.0.4
+  share_plus: ^4.0.7
   url_launcher: ^6.1.2
-  velocity_x: ^3.4.0
+  velocity_x: ^3.5.1
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
