update : - update to latest version flutter 3 - fix bug latest movies - fix bug latest special offers - add loading when changing location

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,28 +27,28 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cached_network_image: 3.2.1
+  cached_network_image: ^3.2.2
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
-  extended_image: ^6.2.1
-  firebase_analytics: ^9.1.8
-  firebase_core: ^1.17.0
+  extended_image: ^6.3.0
+  firebase_analytics: ^9.3.3
+  firebase_core: ^1.21.1
   flutter:
     sdk: flutter
   flutter_easyloading: ^3.0.5
   flutter_inappwebview: ^5.4.3+7
-  flutter_svg: ^1.1.0
+  flutter_svg: ^1.1.4
   get: ^4.6.5
   get_storage: ^2.0.3
   google_fonts: ^3.0.0
-  graphql_flutter: ^5.1.1-beta.3
-  hive: ^2.2.1
+  graphql_flutter: ^5.1.1-beta.4
+  hive: ^2.2.3
   intl: ^0.17.0
   onboarding: ^3.1.0
-  sentry_flutter: ^6.5.1
-  share_plus: ^4.0.7
+  sentry_flutter: ^6.9.1
+  share_plus: ^4.0.10+1
   shrink_sidemenu: ^2.0.0+2-null-safety
-  url_launcher: ^6.1.2
+  url_launcher: ^6.1.5
   velocity_x: ^3.5.1
 
 dev_dependencies:
